<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:background="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll">

        <ImageView
            android:id="@+id/avatar"
            android:layout_margin="0.5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:maxWidth="45dp"
            android:maxHeight="45dp"
            android:scaleType="centerCrop"></ImageView>

        <TextView
            android:id="@+id/username"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"
            android:text="@string/username_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/postsImage"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:src="@drawable/german"
            android:layout_below="@+id/ll"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postsImage"
            android:id="@+id/likess">

            <ImageView
                android:layout_margin="0.5dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/heart"></ImageView>
        <TextView
            android:id="@+id/numoflikes"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/postsImage"
            android:padding="@dimen/card_margin"
            android:text="@string/likes_label"
            android:textColor="?android:textColorSecondary" />
        </LinearLayout>
        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/likess"
            android:padding="@dimen/card_margin"
            android:text="@string/description_placeholder" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:layout_marginLeft="1dp"
            android:layout_below="@+id/description">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/like_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:layout_marginRight="5dp"
                android:textSize="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="15dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/color_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons"
            android:padding="@dimen/card_margin"
            android:text="@string/datee" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>